err/django-xfeed.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_xfeed-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xfeed'...
Listing './lib/python3.5/site-packages/xfeed/docs'...
Listing './lib/python3.5/site-packages/xfeed/docs/_build'...
Listing './lib/python3.5/site-packages/xfeed/docs/_build/html'...
Listing './lib/python3.5/site-packages/xfeed/docs/_build/html/_static'...
Listing './lib/python3.5/site-packages/xfeed/management'...
Listing './lib/python3.5/site-packages/xfeed/management/commands'...
Listing './lib/python3.5/site-packages/xfeed/migrations'...
Compiling './lib/python3.5/site-packages/xfeed/models.py'...
***   File "./lib/python3.5/site-packages/xfeed/models.py", line 198
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xfeed/templates'...
Listing './lib/python3.5/site-packages/xfeed/templates/xfeed'...
Listing './lib/python3.5/site-packages/xfeed/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
